write solutions for question 2 and 3

--- a/2) oops_in_python.ipynb
+++ b/2) oops_in_python.ipynb
@@ -396,11 +396,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Will have to pay Rs104000.0 at 13.0% interest in 2 years\n",
+      "Your Balance is: 1000.0\n",
+      "Your Balance is: 2500.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write code for second question here"
+    "from datetime import datetime\n",
+    "\n",
+    "class Uid:\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def uniqueNumber():\n",
+    "        number=0\n",
+    "        while True:\n",
+    "            number+=1\n",
+    "            yield number\n",
+    "\n",
+    "\n",
+    "class BankAccount:\n",
+    "    def __init__ (self,owner:str,uidGenerator): \n",
+    "        self.account_number:int = uidGenerator\n",
+    "        self.owner:str = owner\n",
+    "        self.opened_date:datetime = datetime.now()\n",
+    "        self.balance:float = 0\n",
+    "    \n",
+    "    \n",
+    "    def deposit(self,amount:float):\n",
+    "        self.balance += amount\n",
+    "        \n",
+    "    def withdraw(self,amount:float):\n",
+    "        self.balance -= amount\n",
+    "        \n",
+    "    def check_balance(self):\n",
+    "        print(f\"Your Balance is: {self.balance}\")\n",
+    "        \n",
+    "class Bank:\n",
+    "    def __init__(self,name:str):\n",
+    "        self.name:str = name\n",
+    "        self.total_balance:float = 0\n",
+    "        self.interest_rate:float = 13.0\n",
+    "        self.bank_accounts:dict[int,BankAccount]={}\n",
+    "        \n",
+    "    def deposit(self,account_number:int,amount:float):\n",
+    "        self.bank_accounts[account_number].deposit(amount)\n",
+    "        self.total_balance += amount\n",
+    "    \n",
+    "    def withdraw(self,account_number:int,amount:float):\n",
+    "        if self.bank_accounts[account_number].balance < amount:\n",
+    "            print(\"Insufficient Balance\")\n",
+    "            return\n",
+    "        self.bank_accounts[account_number].withdraw(amount)\n",
+    "        self.total_balance -= amount\n",
+    "        \n",
+    "    def take_loan(self,amount:float,timePeriod:int):\n",
+    "        total = amount * self.interest_rate * timePeriod\n",
+    "        print (f\"You Will have to pay Rs{total} at {self.interest_rate}% interest in {timePeriod} years\")\n",
+    "    \n",
+    "    def check_account_balance(self,account_number:int):\n",
+    "        self.bank_accounts[account_number].check_balance()\n",
+    "    \n",
+    "    def openaccount(self,accountname:str,generator):\n",
+    "        Bankacc = BankAccount(accountname,generator)\n",
+    "        self.bank_accounts[Bankacc.account_number]=Bankacc\n",
+    "        \n",
+    "\n",
+    "generator=Uid.uniqueNumber()\n",
+    "bank=Bank('State Bank of India')\n",
+    "bank.openaccount('Anurag Jha',next(generator))\n",
+    "bank.openaccount('Satyam',next(generator))\n",
+    "bank.openaccount('Vishal',next(generator))\n",
+    "acc=list(bank.bank_accounts.values())\n",
+    "bank.deposit(acc[0].account_number,6000.0)\n",
+    "bank.deposit(acc[1].account_number,4000.0)\n",
+    "bank.deposit(acc[2].account_number,3000.0)\n",
+    "bank.take_loan(4000.0,2)\n",
+    "bank.withdraw(acc[2].account_number,2000.0)\n",
+    "bank.check_account_balance(acc[2].account_number)\n",
+    "bank.withdraw(acc[0].account_number,3500.0)\n",
+    "bank.check_account_balance(acc[0].account_number)\n",
+    "  "
    ]
   },
   {
@@ -462,11 +545,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vehicles On Display:\n",
+      "Phantom | 6.2 | Diesel | 20000000.0 | Blue | Sedan\n",
+      "Cullinan | 24.0 | Petrol | 8000000.0 | Red | Suv\n",
+      "BoatTail | 15.0 | Diesel | 100000000.0 | Black | Sedan\n",
+      "count = 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write code for the third question here"
+    "# Write code for the third question here\n",
+    "from enum import Enum\n",
+    "\n",
+    "class VehicleType(Enum):\n",
+    "    Sedan = 1\n",
+    "    Suv = 2\n",
+    "    Coupe = 3\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.name\n",
+    "    \n",
+    "class Colour(Enum):\n",
+    "    \n",
+    "    Red = 1\n",
+    "    Blue = 2\n",
+    "    Black = 3\n",
+    "  \n",
+    "    def __str__(self):\n",
+    "        return self.name\n",
+    "\n",
+    "class FuelType(Enum):\n",
+    "    Petrol = 1\n",
+    "    Diesel = 2\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.name\n",
+    "            \n",
+    "\n",
+    "class Vehicle:\n",
+    "    def __init__(self):\n",
+    "        self.type:VehicleType = VehicleType.Sedan\n",
+    "        self.onDisplay:bool = False\n",
+    "        self.name:str = \"\"\n",
+    "        self.number_of_air_bags:int = 4\n",
+    "        self.number_of_seats:int = 5\n",
+    "        self.price:float = 0\n",
+    "        self.fuelType:FuelType = FuelType.Petrol\n",
+    "        self.mileage:float = 0\n",
+    "        self.colour:Colour = Colour.Blue\n",
+    "        \n",
+    "    def update_price(self,price:float):\n",
+    "        self.price = price \n",
+    "        \n",
+    "    def set_on_display(self,onDisplay:bool):\n",
+    "        self.onDisplay = onDisplay\n",
+    "        \n",
+    "class Suv(Vehicle):\n",
+    "    def __init__(self,name:str,colour:str,mileage:float,fuelType:FuelType,price:float):\n",
+    "        super().__init__()\n",
+    "        self.number_of_air_bags = 4\n",
+    "        self.number_of_seats = 7\n",
+    "        self.type = VehicleType.Suv\n",
+    "        self.colour = colour\n",
+    "        self.mileage = mileage\n",
+    "        self.fuelType = fuelType\n",
+    "        self.price = price\n",
+    "        self.name = name\n",
+    "            \n",
+    "class Sedan(Vehicle):\n",
+    "    def __init__(self,name:str,colour:str,mileage:float,fuelType:FuelType,price:float):\n",
+    "        super().__init__()\n",
+    "        self.number_of_air_bags = 2\n",
+    "        self.number_of_seats = 5\n",
+    "        self.type = VehicleType.Sedan\n",
+    "        self.colour = colour\n",
+    "        self.mileage = mileage\n",
+    "        self.fuelType = fuelType\n",
+    "        self.price = price\n",
+    "        self.name = name\n",
+    "    \n",
+    "class Coupe(Vehicle):\n",
+    "    def __init__(self,name:str,colour:str,mileage:float,fuelType:FuelType,price:float):\n",
+    "        super().__init__()\n",
+    "        self.number_of_air_bags = 2\n",
+    "        self.number_of_seats = 2\n",
+    "        self.type = VehicleType.Sedan\n",
+    "        self.colour = colour\n",
+    "        self.mileage = mileage\n",
+    "        self.fuelType = fuelType\n",
+    "        self.price = price\n",
+    "        self.name = name\n",
+    "        \n",
+    "class AutomobileCompany:\n",
+    "    def __init__(self):\n",
+    "        self.allVehicles:list[Vehicle] = []\n",
+    "        \n",
+    "    def addVehicle(self,name:str,colour:str,mileage:float,fuelType:FuelType,price:float,type:VehicleType)->Vehicle:\n",
+    "        if type == VehicleType.Suv:\n",
+    "            v1 = Suv(name,colour,mileage,fuelType,price) \n",
+    "        elif type == VehicleType.Sedan:\n",
+    "            v1 = Sedan(name,colour,mileage,fuelType,price)  \n",
+    "        else:\n",
+    "            v1 = Coupe(name,colour,mileage,fuelType,price)\n",
+    "        self.allVehicles.append(v1)\n",
+    "        return(v1)\n",
+    "    \n",
+    "    def showOnDisplayVehicles(self):\n",
+    "        print(\"Vehicles On Display:\")\n",
+    "        a:int = 0\n",
+    "        for vehicle in self.allVehicles:\n",
+    "            if vehicle.onDisplay is True:\n",
+    "                a += 1\n",
+    "                print(f\"{vehicle.name} | {vehicle.mileage} | {vehicle.fuelType} | {vehicle.price} | {vehicle.colour} | {vehicle.type}\")\n",
+    "            \n",
+    "        print(f\"count = {a}\")\n",
+    "        \n",
+    "        \n",
+    "autoMobile = AutomobileCompany()    \n",
+    "s1=autoMobile.addVehicle('Ghost',Colour.Black,8.2,FuelType.Petrol,10000000.0,VehicleType.Sedan)\n",
+    "s2=autoMobile.addVehicle('Phantom',Colour.Blue,6.2,FuelType.Diesel,20000000.0,VehicleType.Sedan)\n",
+    "s3=autoMobile.addVehicle('Spectre',Colour.Red,10.0,FuelType.Petrol,35000000.0,VehicleType.Sedan)\n",
+    "s4=autoMobile.addVehicle('Cullinan',Colour.Red,24.0,FuelType.Petrol,8000000.0,VehicleType.Suv)\n",
+    "s5=autoMobile.addVehicle('BoatTail',Colour.Black,15.0,FuelType.Diesel,150000000.0,VehicleType.Coupe)\n",
+    "s5.set_on_display(True) \n",
+    "s5.update_price(100000000.0)\n",
+    "s2.set_on_display(True)\n",
+    "s4.set_on_display(True)\n",
+    "autoMobile.showOnDisplayVehicles()\n",
+    "    \n"
    ]
   }
  ],
