array manipulation complete

--- a/3) numpy_arrays_and_their_manipulation.ipynb
+++ b/3) numpy_arrays_and_their_manipulation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Operations and Numpy Arrays\n"
+    "# Numpy Arrays and their Manipulation\n"
    ]
   },
   {
@@ -98,7 +98,8 @@
      "output_type": "stream",
      "text": [
       "Array 1:\n",
-      "[4.7986757e+30 3.4756504e-15 4.6017423e+30 2.0198901e-19 1.7749589e+28]\n",
+      "[ 1.1644790e-42  8.5479206e-44 -2.6364205e-04  6.2357782e-43\n",
+      " -2.5179601e-01]\n",
       "Multi-Dimensional Array 1:\n",
       "[[0 0 0 0 0]\n",
       " [0 0 0 0 0]\n",
@@ -128,11 +129,11 @@
       " [1 1 1 1 1]\n",
       " [1 1 1 1 1]]\n",
       "Empty_Like Array:\n",
-      "[[    0     0     0     0     0]\n",
-      " [  256     0  1024     0 17152]\n",
-      " [    0 29440    30     0   124]\n",
-      " [  106   100   373  3442   124]\n",
-      " [  106   416   356   628   673]]\n",
+      "[[0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
       "Identity Array:\n",
       "[[1 0 0]\n",
       " [0 1 0]\n",
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -542,6 +543,280 @@
     "print(arr-5)\n",
     "print(arr*5)\n",
     "print(arr/5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hstack and Vstack:\n",
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[['Satyam' '10.0' '10']\n",
+      " ['Anurag' '20.0' '10']]\n",
+      "Concatenate:\n",
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[['Satyam' '10.0' '10']\n",
+      " ['Anurag' '20.0' '10']]\n",
+      "Hstack and Vstack:\n",
+      "[['1' '2' '3' '4' '5' '6']\n",
+      " ['S' 'A' 'T' 'Y' 'A' 'M']]\n",
+      "[['Satyam' '10.0' '10']\n",
+      " ['Anurag' '20.0' '10']\n",
+      " ['Tushar' '9.0' '7']\n",
+      " ['Akmal' '10.0' '9']]\n",
+      "Concatenate:\n",
+      "[['1' '2' '3' '4' '5' '6']\n",
+      " ['S' 'A' 'T' 'Y' 'A' 'M']]\n",
+      "[[['Satyam' '10.0' '10']\n",
+      "  ['Anurag' '20.0' '10']\n",
+      "  ['Tushar' '9.0' '7']\n",
+      "  ['Akmal' '10.0' '9']]]\n",
+      "Stack:\n",
+      "[['Satyam' '10.0' '10']\n",
+      " ['Anurag' '20.0' '10']]\n",
+      "[['Satyam' 'Anurag']\n",
+      " ['10.0' '20.0']\n",
+      " ['10' '10']]\n",
+      "Dstack:\n",
+      "[[['Satyam' 'Anurag']\n",
+      "  ['10.0' '20.0']\n",
+      "  ['10' '10']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hstack, Vstack and Stack\n",
+    "\n",
+    "marksArray1=np.array([1,2,3,4,5])\n",
+    "marksArray2=np.array([6,7,8,9,10])\n",
+    "dataArray1=np.array([\"Satyam\",10.0,10])\n",
+    "dataArray2=np.array([\"Anurag\",20.0,10])\n",
+    "print(\"Hstack and Vstack:\")\n",
+    "print(np.hstack([marksArray1,marksArray2])) # Arr1 + Arr2\n",
+    "print(np.vstack([dataArray1,dataArray2]))\n",
+    "# Arr1\n",
+    "#  +\n",
+    "# Arr2\n",
+    "print(\"Concatenate:\")\n",
+    "print(np.concatenate([marksArray1,marksArray2],axis=0)) # Yields the same output as hstack\n",
+    "print(np.concatenate([[dataArray1],[dataArray2]],axis=0)) # Yields the same output as vstack\n",
+    "view1=np.array([[1,2,3],[\"S\",\"A\",\"T\"]])\n",
+    "view2=np.array([[4,5,6],[\"Y\",\"A\",\"M\"]])\n",
+    "dataArray3=np.array([[\"Satyam\",10.0,10],[\"Anurag\",20.0,10]])\n",
+    "dataArray4=np.array([[\"Tushar\",9.0,7],[\"Akmal\",10.0,9]])\n",
+    "print(\"Hstack and Vstack:\")\n",
+    "print(np.hstack([view1,view2])) # Arr3 + Arr4\n",
+    "print(np.vstack([dataArray3,dataArray4]))\n",
+    "#  Arr1\n",
+    "#   +\n",
+    "#  Arr2\n",
+    "print(\"Concatenate:\")\n",
+    "print(np.concatenate([view1,view2],axis=1)) # Yields the same output as hstack\n",
+    "print(np.concatenate([[dataArray3],[dataArray4]],axis=1)) # Yields the same output as vstack\n",
+    "\n",
+    "# In stack always a new axis is added\n",
+    "print(\"Stack:\")\n",
+    "print(np.stack([dataArray1,dataArray2],axis=0))\n",
+    "print(np.stack([dataArray1,dataArray2],axis=1))\n",
+    "print(\"Dstack:\")\n",
+    "print(np.dstack([dataArray1,dataArray2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One dimensional array:\n",
+      "[0 1]\n",
+      "\n",
+      "Two dimensional array:\n",
+      "[[ 0  1]\n",
+      " [ 2  3]\n",
+      " [ 4  5]\n",
+      " [ 6  7]\n",
+      " [ 8  9]\n",
+      " [10 11]]\n",
+      "0:0\n",
+      "1:1\n",
+      "0:2\n",
+      "1:3\n",
+      "0:4\n",
+      "1:5\n",
+      "0:6\n",
+      "1:7\n",
+      "0:8\n",
+      "1:9\n",
+      "0:10\n",
+      "1:11\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_1d = np.arange(2) \n",
+    "print(\"One dimensional array:\") \n",
+    "print(num_1d) \n",
+    "  \n",
+    "num_2d = np.arange(12).reshape(6,2) \n",
+    "print(\"\\nTwo dimensional array:\") \n",
+    "print(num_2d) \n",
+    "\n",
+    "for a, b in np.nditer([num_1d, num_2d]): \n",
+    "    print(f\"{a}:{b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1, 2]]), array([[3, 4]]), array([], shape=(0, 2), dtype=int64), array([], shape=(0, 2), dtype=int64)]\n",
+      "[array([1, 2]), array([3, 4]), array([5, 6]), array([7, 8]), array([ 9, 10])]\n",
+      "[array([[1],\n",
+      "       [3]]), array([[2],\n",
+      "       [4]])]\n",
+      "[array([1, 2, 3, 4, 5]), array([ 6,  7,  8,  9, 10])]\n",
+      "VSplit:\n",
+      "[array([[1, 2, 3],\n",
+      "       [4, 5, 6]]), array([[ 7,  8,  9],\n",
+      "       [10, 11, 12]])]\n",
+      "HSplit:\n",
+      "[array([[ 1,  2],\n",
+      "       [ 5,  6],\n",
+      "       [ 9, 10]]), array([[ 3,  4],\n",
+      "       [ 7,  8],\n",
+      "       [11, 12]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Splitting an Array\n",
+    "\n",
+    "arrMy1=np.array([[1,2],[3,4]])\n",
+    "print(np.array_split(arrMy1,4))  #Never gives error and provides empty arrays instead\n",
+    "arrMy2=np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "print(np.array_split(arrMy2,5))\n",
+    "print(np.split(arrMy1,2,axis=1))\n",
+    "print(np.split(arrMy2,2,axis=0))\n",
+    "\n",
+    "print(\"VSplit:\")\n",
+    "matrix = np.array([[1, 2, 3],[4, 5, 6],[7, 8, 9],[10, 11, 12]])\n",
+    "print(np.vsplit(matrix, 2))\n",
+    "print(\"HSplit:\")\n",
+    "array = np.array([[1, 2, 3, 4],[5, 6, 7, 8],[9, 10, 11, 12]])\n",
+    "print(np.hsplit(array, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "[1 2 3 4]\n",
+      "[ 0  1  2  3  4  5  6 10]\n",
+      "[0 1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comparison Operators\n",
+    "# Always returns a boolean array\n",
+    "\n",
+    "from functools import reduce\n",
+    "\n",
+    "array1=np.array([1,2,3])\n",
+    "array2=np.array([1,2,4])\n",
+    "equal=array1==array2  # np.array_equal(array1,array2)\n",
+    "print(equal.all())  # True if all elements are True, else False\n",
+    "greater=array1>array2  # np.greater(arra1,array2)\n",
+    "print(greater.all())  # True if all elements are True, else False\n",
+    "lesser=array1<array2  # np.less(array1,array2)\n",
+    "print(lesser.all())  # True if all elements are True, else False\n",
+    "greater_equal=array1>=array2  # np.greater_equal(array1,array2)\n",
+    "print(greater_equal.all())  # True if all elements are True, else False\n",
+    "lesser_equal=array1<=array2  # np.less_equal(array1,array2)\n",
+    "print(lesser_equal.all())  # True if all elements are True, else False\n",
+    "\n",
+    "# 1-d Array\n",
+    "print(np.union1d(array1,array2))\n",
+    "array3 = np.array([[1, 2, 3], [4, 5, 6]]) \n",
+    "array4 = np.array([0, 5, 10]) \n",
+    "print(np.union1d(array3,array4))\n",
+    "\n",
+    "  \n",
+    "# Union of more than two arrays using reduce function\n",
+    "array5 = reduce(np.union1d, ([1, 2, 3], [1, 3, 5], \n",
+    "                            [2, 4, 6], [0, 0, 0])) \n",
+    "print(array5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array :\n",
+      "[[11 11 12 11]\n",
+      " [13 11 12 11]\n",
+      " [16 11 12 11]\n",
+      " [11 11 12 11]]\n",
+      "Unique Elemets:  [11 12 13 16]\n",
+      "Unique Rows\n",
+      "[[11 11 12 11]\n",
+      " [13 11 12 11]\n",
+      " [16 11 12 11]]\n",
+      "Unique Rows by Column\n",
+      "[[11 11 12]\n",
+      " [11 13 12]\n",
+      " [11 16 12]\n",
+      " [11 11 12]]\n",
+      "[ 1  5  7  0  6  2  9  0 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr2D = np.array([[11, 11, 12, 11],\n",
+    "                     [13, 11, 12, 11],\n",
+    "                     [16, 11, 12, 11],\n",
+    "                     [11, 11, 12, 11]])\n",
+    " \n",
+    "print('Original Array :' ,\n",
+    "      arr2D, sep = '\\n')\n",
+    " \n",
+    "print(\"Unique Elemets: \",np.unique(arr2D))\n",
+    "print(\"Unique Rows\",np.unique(arr2D, axis = 0),sep='\\n')\n",
+    "print(\"Unique Rows by Column\",np.unique(arr2D, axis = 1),sep='\\n')\n",
+    "\n",
+    "# Trim-Zeroes\n",
+    "arr1D = np.array((0, 0, 0, 0, 1, 5, 7, 0, 6, 2, 9, 0, 10, 0, 0)) \n",
+    "print(np.trim_zeros(arr1D)) \n",
+    "                        "
    ]
   }
  ],
