--- a/3) numpy_arrays_and_their_manipulation.ipynb
+++ b/3) numpy_arrays_and_their_manipulation.ipynb
@@ -49,7 +49,8 @@
     "print(\"Reshaped Array 2 as 2x2:\",arr2.reshape(2,2),sep=\"\\n\")\n",
     "print(\"Array 1's Shape:\",arr1.shape,sep=\"\\n\")\n",
     "print(\"Array 1:\",arr1,sep=\"\\n\")\n",
-    "arr1=arr1.reshape(3,3)\n",
+    "arr1=arr1.reshape(3,3) # Doesn't change the original array\n",
+    "arr1.resize(3,3) # Changes the original array\n",
     "print(\"Array 1's Shape:\",arr1.shape,sep=\"\\n\")\n",
     "print(\"Array 1:\",arr1,sep=\"\\n\")\n",
     "arr3=np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
@@ -98,14 +99,13 @@
      "output_type": "stream",
      "text": [
       "Array 1:\n",
-      "[ 1.1644790e-42  8.5479206e-44 -2.6364205e-04  6.2357782e-43\n",
-      " -2.5179601e-01]\n",
+      "[4.7421254e+16 1.4584966e-19 5.8270455e-10 1.1703733e-19 1.3563156e-19]\n",
       "Multi-Dimensional Array 1:\n",
-      "[[0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]]\n",
+      "[[    0     0     0     0     0]\n",
+      " [    0     0     0     0     0]\n",
+      " [    0     0     0     0     0]\n",
+      " [    0     0     0     0     0]\n",
+      " [    0     0     0     0 28528]]\n",
       "Ones_Like Array:\n",
       "[[1 1 1 1 1]\n",
       " [1 1 1 1 1]\n",
@@ -178,55 +178,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix 1:\n",
-      "[[0 1 2]\n",
-      " [3 4 5]]\n",
-      "Matrix 2:\n",
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
-      "Matrix 1 + Matrix 2:\n",
-      "[[ 1  3  5]\n",
-      " [ 7  9 11]]\n",
-      "Matrix 1 - Matrix 2:\n",
-      "[[-1 -1 -1]\n",
-      " [-1 -1 -1]]\n",
-      "Matrix 1 * Matrix 3:\n",
-      "[[13 16]\n",
-      " [40 52]]\n",
-      "Matrix 1 / Matrix 2:\n",
-      "[[0.         0.5        0.66666667]\n",
-      " [0.75       0.8        0.83333333]]\n",
-      "Matrix 1 * Transpose of Matrix 1:\n",
-      "[[ 5 14]\n",
-      " [14 50]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Matrix Operations in Numpy\n",
-    "\n",
-    "mat1=np.matrix([[0,1,2],[3,4,5]])\n",
-    "print(\"Matrix 1:\",mat1,sep=\"\\n\")\n",
-    "mat2=np.matrix([[1,2,3],[4,5,6]])\n",
-    "mat3=np.matrix([[1,2],[3,4],[5,6]])\n",
-    "print(\"Matrix 2:\",mat2,sep=\"\\n\")\n",
-    "print(\"Matrix 1 + Matrix 2:\",mat1+mat2,sep=\"\\n\") # Shape must match\n",
-    "print(\"Matrix 1 - Matrix 2:\",mat1-mat2,sep=\"\\n\") # Shape must match\n",
-    "print(\"Matrix 1 * Matrix 3:\",mat1*mat3,sep=\"\\n\") # Number of Col of Arr1 = Number of Row of Arr2, (2,3)*(3,2)=(2,2)\n",
-    "print(\"Matrix 1 / Matrix 2:\",mat1/mat2,sep=\"\\n\") # Shape must match\n",
-    "print(\"Matrix 1 * Transpose of Matrix 1:\",mat1*mat1.T,sep=\"\\n\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "[ 1  2  3  4  5  6  7  8  9 10]\n",
       "Sum =  55\n",
       "[3 7]\n",
@@ -253,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +747,52 @@
       " [11 13 12]\n",
       " [11 16 12]\n",
       " [11 11 12]]\n",
-      "[ 1  5  7  0  6  2  9  0 10]\n"
+      "[ 1  5  7  0  6  2  9  0 10]\n",
+      "[[[[0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]]\n",
+      "\n",
+      "  [[0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]]]]\n",
+      "[[[[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]]\n",
+      "\n",
+      "\n",
+      " [[[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]\n",
+      "\n",
+      "  [[0.]\n",
+      "   [0.]\n",
+      "   [0.]\n",
+      "   [0.]]]]\n",
+      "[[[[0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]]]\n",
+      "\n",
+      "\n",
+      " [[[0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]\n",
+      "   [0. 0. 0. 0.]]]]\n"
      ]
     }
    ],
@@ -815,7 +811,13 @@
     "\n",
     "# Trim-Zeroes\n",
     "arr1D = np.array((0, 0, 0, 0, 1, 5, 7, 0, 6, 2, 9, 0, 10, 0, 0)) \n",
-    "print(np.trim_zeros(arr1D)) \n",
+    "arr1D=np.trim_zeros(arr1D)\n",
+    "print(arr1D) \n",
+    "\n",
+    "thisArr=np.zeros((1,2,3,4))\n",
+    "print(thisArr)\n",
+    "print(np.moveaxis(thisArr,0,-1))\n",
+    "print(np.swapaxes(thisArr,0,1))\n",
     "                        "
    ]
   }
