estimation in numpy

--- a/3) numpy_arrays_and_their_manipulation.ipynb
+++ b/3) numpy_arrays_and_their_manipulation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +99,13 @@
      "output_type": "stream",
      "text": [
       "Array 1:\n",
-      "[4.7421254e+16 1.4584966e-19 5.8270455e-10 1.1703733e-19 1.3563156e-19]\n",
+      "[-6.60932e-29  8.32371e-43  0.00000e+00  0.00000e+00  1.83674e-40]\n",
       "Multi-Dimensional Array 1:\n",
-      "[[    0     0     0     0     0]\n",
-      " [    0     0     0     0     0]\n",
-      " [    0     0     0     0     0]\n",
-      " [    0     0     0     0     0]\n",
-      " [    0     0     0     0 28528]]\n",
+      "[[0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n",
       "Ones_Like Array:\n",
       "[[1 1 1 1 1]\n",
       " [1 1 1 1 1]\n",
@@ -129,11 +129,11 @@
       " [1 1 1 1 1]\n",
       " [1 1 1 1 1]]\n",
       "Empty_Like Array:\n",
-      "[[0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]]\n",
+      "[[ 30210 -28532    594 -32768 -28366]\n",
+      " [   485   -858 -27709   4906 -28298]\n",
+      " [   594      0   4962 -28298    594]\n",
+      " [     0     27      0      0      0]\n",
+      " [     0      0      0      0      0]]\n",
       "Identity Array:\n",
       "[[1 0 0]\n",
       " [0 1 0]\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -819,6 +819,143 @@
     "print(np.moveaxis(thisArr,0,-1))\n",
     "print(np.swapaxes(thisArr,0,1))\n",
     "                        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Array Slicing and Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  0  4  5  6  7  8  9 10]\n",
+      "[5 7]\n",
+      "[ 5  6  7  8  9 10]\n",
+      "[5 6 7 8 9]\n",
+      "[[[ 2  3]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 8  9]\n",
+      "  [11 12]]]\n",
+      "[[ 4  5  6]\n",
+      " [10 11 12]]\n",
+      "(2, 2, 3)\n",
+      "[[ 2  5]\n",
+      " [ 8 11]]\n",
+      "[[ 2  5]\n",
+      " [ 8 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "b=a[2:5] # Slicing always retuns a view or shallow copy of the array\n",
+    "c=a[0]  # Indexing always returns a copy of the value at that index of the array\n",
+    "b[0]=0\n",
+    "c=0\n",
+    "print(a)\n",
+    "\n",
+    "# Slicing with start:stop:step\n",
+    "print(a[4:8:2])\n",
+    "print(a[4:])\n",
+    "print(a[4:-1])\n",
+    "\n",
+    "# Slicing using ellipsis\n",
+    "\n",
+    "d = np.array([[[1, 2, 3],[4, 5, 6]], \n",
+    "            [[7, 8, 9],[10, 11, 12]]]) \n",
+    "print(d[::,:4,1:3])\n",
+    "print(d[:,1])\n",
+    "print(d.shape)\n",
+    "# The ellipsis (...) is a shorthand for selecting all preceding dimensions\n",
+    "print(d[...,1])\n",
+    "print(d[::,::,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 6]\n",
+      "[[1 2]\n",
+      " [5 6]]\n",
+      "[ 6  7  8  9 10]\n",
+      "[[5 6]]\n",
+      "[[3 4]\n",
+      " [5 6]]\n",
+      "[[2]\n",
+      " [4]\n",
+      " [6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Advanced Indexing\n",
+    "\n",
+    "yourArr=np.array([[1,2],[3,4],[5,6]])\n",
+    "print(yourArr[[0,1,2],[0,0,1]])\n",
+    "print(yourArr[[0,2]])\n",
+    "yourArr1=np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "print(yourArr1[yourArr1>5])\n",
+    "print(yourArr[yourArr.sum(-1)>7])\n",
+    "\n",
+    "# Use numpy.compress to select elements based on the condition\n",
+    "print(np.compress([0,1,1],yourArr,axis=0))\n",
+    "print(np.compress([False,True],yourArr,axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  2.4   8.7  31.2]\n",
+      " [157.2  70.8 292. ]\n",
+      " [165.6  95.1 191.2]\n",
+      " [ 43.2  33.   39.2]]\n",
+      "[[18 13]\n",
+      " [34 37]]\n",
+      "[[18 34]\n",
+      " [13 37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate Calories for each macronutrient\n",
+    "\n",
+    "macros = np.array([ \n",
+    "  [0.8, 2.9, 3.9], \n",
+    "  [52.4, 23.6, 36.5], \n",
+    "  [55.2, 31.7, 23.9], \n",
+    "  [14.4, 11, 4.9] \n",
+    "   ]) \n",
+    "  \n",
+    "result = np.zeros_like(macros) \n",
+    "  \n",
+    "cal_per_macro = np.array([3, 3, 8]) \n",
+    "  \n",
+    "for i in range(macros.shape[0]): \n",
+    "    result[i] = macros[i] * cal_per_macro \n",
+    "  \n",
+    "print(result )"
    ]
   }
  ],
