--- a/4) numpy_matrices_and_their_manipulation.ipynb
+++ b/4) numpy_matrices_and_their_manipulation.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.9e-324 9.9e-324 1.5e-323]\n",
-      " [2.0e-323 2.5e-323 3.0e-323]\n",
-      " [3.5e-323 4.0e-323 4.4e-323]]\n",
+      "[[0.00000000e+000 0.00000000e+000 0.00000000e+000]\n",
+      " [0.00000000e+000 0.00000000e+000 8.43864123e-321]\n",
+      " [1.26895348e-311 2.00485144e-307 0.00000000e+000]]\n",
       "[[0. 0.]\n",
       " [0. 0.]]\n",
       "[[1 1 1]\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,9 @@
       "[[4]\n",
       " [1]\n",
       " [6]]\n",
-      "[[4 1 6]]\n"
+      "[[4 1 6]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
      ]
     }
    ],
@@ -243,9 +245,9 @@
     "print(np.dot(arr3,arr4)) # Vector dot product\n",
     "print(np.cross(arr3,arr4)) # Vector cross product\n",
     "\n",
-    "arr5 = np.matrix('[4; 1; 6]') # Converts a Nx1 matrix to 1xN else returns the same matrix\n",
+    "arr5 = np.matrix('[4; 1; 6]') \n",
     "print(arr5)\n",
-    "print(arr5.squeeze())"
+    "print(arr5.squeeze())# Converts a Nx1 matrix to 1xN else returns the same matrix"
    ]
   }
  ],
