--- a/3) numpy_arrays_and_their_manipulation.ipynb
+++ b/3) numpy_arrays_and_their_manipulation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +99,13 @@
      "output_type": "stream",
      "text": [
       "Array 1:\n",
-      "[-6.60932e-29  8.32371e-43  0.00000e+00  0.00000e+00  1.83674e-40]\n",
+      "[1. 1. 1. 1. 1.]\n",
       "Multi-Dimensional Array 1:\n",
-      "[[0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]\n",
-      " [0 0 0 0 0]]\n",
+      "[[10 10 10 10 10]\n",
+      " [10 10 10 10 10]\n",
+      " [10 10 10 10 10]\n",
+      " [10 10 10 10 10]\n",
+      " [10 10 10 10 10]]\n",
       "Ones_Like Array:\n",
       "[[1 1 1 1 1]\n",
       " [1 1 1 1 1]\n",
@@ -129,11 +129,11 @@
       " [1 1 1 1 1]\n",
       " [1 1 1 1 1]]\n",
       "Empty_Like Array:\n",
-      "[[ 30210 -28532    594 -32768 -28366]\n",
-      " [   485   -858 -27709   4906 -28298]\n",
-      " [   594      0   4962 -28298    594]\n",
-      " [     0     27      0      0      0]\n",
-      " [     0      0      0      0      0]]\n",
+      "[[1 1 1 1 1]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n",
       "Identity Array:\n",
       "[[1 0 0]\n",
       " [0 1 0]\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,11 +180,15 @@
      "text": [
       "[ 1  2  3  4  5  6  7  8  9 10]\n",
       "Sum =  55\n",
+      "Product =  3628800\n",
       "[3 7]\n",
       "[4 6]\n",
       "10\n",
       "[1 2 3 4]\n",
-      "[1 3 2 4]\n"
+      "[1 3 2 4]\n",
+      "[ 2 12]\n",
+      "[3 8]\n",
+      "24\n"
      ]
     }
    ],
@@ -194,17 +198,21 @@
     "newArr=np.array([1,2,3,4,5,6,7,8,9,10])\n",
     "print(newArr)\n",
     "print(\"Sum = \",np.sum(newArr))\n",
+    "print(\"Product = \",np.prod(newArr))\n",
     "newArr1=np.array([[1,2],[3,4]])\n",
     "print(np.sum(newArr1,axis=1))\n",
     "print(np.sum(newArr1,axis=0))\n",
     "print(np.sum(newArr1))\n",
     "print(newArr1.flatten(\"C\")) # Array is flatted into 1-deminsional array, Row-Major\n",
-    "print(newArr1.flatten(\"F\")) # Array is flatted into 1-deminsional array, Column-Major"
+    "print(newArr1.flatten(\"F\")) # Array is flatted into 1-deminsional array, Column-Major\n",
+    "print(np.prod(newArr1,axis=1))\n",
+    "print(np.prod(newArr1,axis=0))\n",
+    "print(np.prod(newArr1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -523,10 +531,10 @@
       "Concatenate:\n",
       "[['1' '2' '3' '4' '5' '6']\n",
       " ['S' 'A' 'T' 'Y' 'A' 'M']]\n",
-      "[[['Satyam' '10.0' '10']\n",
-      "  ['Anurag' '20.0' '10']\n",
-      "  ['Tushar' '9.0' '7']\n",
-      "  ['Akmal' '10.0' '9']]]\n",
+      "[['Satyam' '10.0' '10']\n",
+      " ['Anurag' '20.0' '10']\n",
+      " ['Tushar' '9.0' '7']\n",
+      " ['Akmal' '10.0' '9']]\n",
       "Stack:\n",
       "[['Satyam' '10.0' '10']\n",
       " ['Anurag' '20.0' '10']]\n",
@@ -568,7 +576,7 @@
     "#  Arr2\n",
     "print(\"Concatenate:\")\n",
     "print(np.concatenate([view1,view2],axis=1)) # Yields the same output as hstack\n",
-    "print(np.concatenate([[dataArray3],[dataArray4]],axis=1)) # Yields the same output as vstack\n",
+    "print(np.concatenate([dataArray3,dataArray4],axis=0)) # Yields the same output as vstack\n",
     "\n",
     "# In stack always a new axis is added\n",
     "print(\"Stack:\")\n",
@@ -580,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -930,11 +938,7 @@
       "[[  2.4   8.7  31.2]\n",
       " [157.2  70.8 292. ]\n",
       " [165.6  95.1 191.2]\n",
-      " [ 43.2  33.   39.2]]\n",
-      "[[18 13]\n",
-      " [34 37]]\n",
-      "[[18 34]\n",
-      " [13 37]]\n"
+      " [ 43.2  33.   39.2]]\n"
      ]
     }
    ],
