python basics questions

--- a/1) python_basics.ipynb
+++ b/1) python_basics.ipynb
@@ -315,6 +315,219 @@
     "},\n",
     "}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Basics Questions\n",
+    "Question 1) <br>\n",
+    "Lets say you have a list of marks of students and a list of names of students. Convert these lists into a dictionary where the key is the name and the value is the marks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Satyam': 100, 'Anurag': 90, 'Tushar': 80, 'Akmal': 70, 'Pratyaksh': 99}\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=[\"Satyam\",\"Anurag\",\"Tushar\",\"Akmal\",\"Pratyaksh\"]\n",
+    "marks=[100,90,80,70,99]\n",
+    "nameMarksDict={}\n",
+    "for i in range(len(name)):\n",
+    "    nameMarksDict[name[i]]=marks[i]\n",
+    "print(nameMarksDict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 2) <br>\n",
+    "Given an integer, , perform the following conditional actions:\n",
+    "\n",
+    "- If  is odd, print Weird\n",
+    "- If  is even and in the inclusive range of 2 to 5, print Not Weird\n",
+    "- If  is even and in the inclusive range of 6 to 20, print Weird\n",
+    "- If  is even and greater than 20, print Not Weird"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weird\n",
+      "Weird\n",
+      "Not Weird\n",
+      "Weird\n",
+      "Not Weird\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isWeird(num:int)->str:\n",
+    "    if num%2!=0:\n",
+    "        return \"Weird\"\n",
+    "    elif 2<=num<=5:\n",
+    "        return \"Not Weird\"\n",
+    "    elif 6<=num<=20:\n",
+    "        return \"Weird\"\n",
+    "    else:\n",
+    "        return \"Not Weird\"\n",
+    "        \n",
+    "print(isWeird(5))\n",
+    "print(isWeird(10))\n",
+    "print(isWeird(4))\n",
+    "print(isWeird(7))\n",
+    "print(isWeird(22))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 3) <br>\n",
+    "The provided code stub reads and integer n from STDIN. For all non-negative integers i<n, print i^2 ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nonNegSquares(num:int):\n",
+    "    for i in range(num):\n",
+    "        print(i*i)\n",
+    "\n",
+    "nonNegSquares(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 4) <br>\n",
+    "An extra day is added to the calendar almost every four years as February 29, and the day is called a leap day. It corrects the calendar for the fact that our planet takes approximately 365.25 days to orbit the sun. A leap year contains a leap day.\n",
+    "<br><br>\n",
+    "In the Gregorian calendar, three conditions are used to identify leap years:\n",
+    "<br>\n",
+    "A year is a leap year if it is divisible by 4, except for years that are divisible by 100 but not by 400.\n",
+    "\n",
+    "This means that in the Gregorian calendar, the years 2000 and 2400 are leap years, while 1800, 1900, 2100, 2200, 2300 and 2500 are NOT leap years\n",
+    "\n",
+    "Given a year, determine whether it is a leap year. If it is a leap year, return the Boolean True, otherwise return False."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isLeapYear(year:int)->bool:\n",
+    "    if year%4==0:\n",
+    "        if year%100==0 and year%400!=0:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "print(isLeapYear(2000))\n",
+    "print(isLeapYear(2400))\n",
+    "print(isLeapYear(1800))\n",
+    "print(isLeapYear(1900))\n",
+    "print(isLeapYear(2100))\n",
+    "print(isLeapYear(2200))\n",
+    "print(isLeapYear(200))\n",
+    "print(isLeapYear(4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 5) <br>\n",
+    "Given the participants' score sheet for your University Sports Day, you are required to find the runner-up score. You are given n scores. Store them in a list and find the score of the runner-up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def runnerUpScore1(scores:list[int]):\n",
+    "    max=float(\"-inf\")\n",
+    "    max2=float(\"-inf\")\n",
+    "    for i in range(len(scores)):\n",
+    "        if scores[i]> max:\n",
+    "            max2=max\n",
+    "            max=scores[i]\n",
+    "        elif max>scores[i]>max2:\n",
+    "            max2=scores[i]\n",
+    "\n",
+    "    return max2\n",
+    "\n",
+    "def runnerUpScore2(scores:list[int]):\n",
+    "    return list(set(scores))[-2]\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "n=5\n",
+    "scores=\"2 3 6 6 5\"\n",
+    "scoresList=list(map(int,scores.split(\" \")))\n",
+    "print(runnerUpScore1(scoresList))\n",
+    "print(runnerUpScore2(scoresList))\n"
+   ]
   }
  ],
  "metadata": {
